--- a/src/app/ejb-interfaces/pom.xml
+++ b/src/app/ejb-interfaces/pom.xml
@@ -25,6 +25,17 @@
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
     </dependency>
+      <dependency>
+          <groupId>org.jetbrains</groupId>
+          <artifactId>annotations</artifactId>
+          <version>RELEASE</version>
+          <scope>compile</scope>
+      </dependency>
+      <dependency>
+          <groupId>jakarta.platform</groupId>
+          <artifactId>jakarta.jakartaee-web-api</artifactId>
+          <version>10.0.0</version>
+      </dependency>
   </dependencies>
 
   <build>
