--- a/src/app/ejb/pom.xml
+++ b/src/app/ejb/pom.xml
@@ -37,6 +37,11 @@
       <version>1.0.0-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
+      <dependency>
+          <groupId>commons-codec</groupId>
+          <artifactId>commons-codec</artifactId>
+          <version>1.11</version>
+      </dependency>
   </dependencies>
 
   <build>
