--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,25 @@
-
-/src/app/out
-/src/app/ejb/target
-src/app/web/target/web/WEB-INF/lib/ejb-interfaces-1.0.0-SNAPSHOT.jar
+target 
+*.jar
+*.class
+.rebar3
+_build
+_checkouts
+_vendor
+.eunit
+*.o
+*.beam
+*.plt
+*.swp
+*.swo
+.erlang.cookie
+ebin
+log
+erl_crash.dump
+.rebar
+logs
+.idea
+*.iml
+rebar3.crashdump
+*~
+.DS_Store
+.env
