Finished connection/disconnection logic + test to verify it

--- a/src/erlang/shared_white_board/rebar.config
+++ b/src/erlang/shared_white_board/rebar.config
@@ -1,8 +1,8 @@
 {erl_opts, [debug_info]}.
 
 {deps, [
-    {cowboy, "2.9.2"},
-    {jwt, "1.0.3"}
+    cowboy,
+    jwt
 ]}.
 
 {relx, [
@@ -12,7 +12,8 @@
          stdlib,
          cowboy,
          jwt,
-         shared_white_board
+         shared_white_board, 
+        crypto
         ]
     },
     {dev_mode, true},
