--- a/src/erlang/shared_white_board/rebar.config
+++ b/src/erlang/shared_white_board/rebar.config
@@ -1,4 +1,4 @@
-{erl_opts, [debug_info]}.
+{erl_opts, [debug_info, {src_dirs, ["src", "src/whiteboard", "src/cowboy", "src/mnesia", "src/utils"]}]}.
 
 {deps, [
     cowboy,
