--- a/src/app/web/pom.xml
+++ b/src/app/web/pom.xml
@@ -43,6 +43,8 @@
       <artifactId>ejb-interfaces</artifactId>
       <version>1.0.0-SNAPSHOT</version>
     </dependency>
+
+
     <dependency>
       <groupId>jakarta.ejb</groupId>
       <artifactId>jakarta.ejb-api</artifactId>
@@ -81,6 +83,11 @@
       <artifactId>jakarta.servlet-api</artifactId>
       <version>6.0.0</version>
       <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.13.0</version>
     </dependency>
 
   </dependencies>
