--- a/src/app/web/pom.xml
+++ b/src/app/web/pom.xml
@@ -89,7 +89,11 @@
       <artifactId>jackson-databind</artifactId>
       <version>2.13.0</version>
     </dependency>
-
+    <dependency>
+      <groupId>org.webjars</groupId>
+      <artifactId>bootstrap</artifactId>
+      <version>5.1.3</version>
+    </dependency>
   </dependencies>
 
   <build>
