Final erlang update (including comments, RPC call retrial system and casting in case of cursor update event)

--- a/src/erlang/shared_white_board/config/sys.config
+++ b/src/erlang/shared_white_board/config/sys.config
@@ -1,5 +1,8 @@
 [
   {shared_white_board, [
-      {cluster_nodes, ['node1@localhost']}
+      {cluster_nodes, [
+          {'node1@localhost', 8889},
+          {'node2@localhost', 8890}
+      ]}
   ]}
 ].
