added third erlang server in config

--- a/src/erlang/shared_white_board/config/sys.config
+++ b/src/erlang/shared_white_board/config/sys.config
@@ -2,7 +2,8 @@
   {shared_white_board, [
       {cluster_nodes, [
           {'node1@localhost', 8889},
-          {'node2@localhost', 8890}
+          {'node2@localhost', 8890},
+          {'node3@localhost', 8891}
       ]}
   ]}
 ].
