--- a/src/nginx/nginx.conf
+++ b/src/nginx/nginx.conf
@@ -15,6 +15,7 @@ http {
         hash $whiteboard_id consistent; 
         server 127.0.0.1:8889;
         server 127.0.0.1:8890;
+        server 127.0.0.1:8891;
     }
 
     map $request_uri $whiteboard_id {
